Refactored model Post.